2005-07-21  Stefan Seefeld  <stefan@codesourcery.com>

	* setup.py: Adjust contact info.
	* qm/test/doc/manual.xml: Update copyright notice.

2005-07-21  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dg_test.py (DGTest._RunDGToolPortion): Fix
	typo.

	* qm/extension.py (Extension.GetClassName): New method.
	(Extension.GetExplicitArguments): Likewise.
	(Extension.MakeDomEelement): Use GetExplicitArguments.
	(parse_descriptor): Add extension_loader.
	* qm/test/cmdline.py (qm.test.runnable.Runnable): Import it.
	(QMTest.extension_id_option_spec): New variable.
	(QMTest.conflicting_option_specs): Update.
	(QMTest.__ExecuteCreate): Support writing extensions to the
	database.
	* qm/test/database.py (Database.GetExtension): Fix typo.
	* qm/test/doc/reference.xml: Document --id option to "qmtest
	create".
	* qm/test/share/messages/diagnostics.txt (db not modifiable): New
	message.
	(no db specified): Update message.

2005-07-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/database.py (qm.test.resource.Resource): Import it.
	(qm.test.suite.Suite): Likewise.
	(Database._is_generic_database): New
	variable.
	(Database.GetExtension): New function.
	(Database.GetTest): Use it.
	(Database.GetResource): Likewise.
	(Database.GetSuite): Likewise.
	* qm/test/doc/reference.xml: Update information about writing
	database classes.

	* qm/executable.py (Executable.Spawn): Initialize self.__child.
	(Executable._GetChildPID): Adjust documentation to reflect that
	this function may return None.
	(TimeoutExecutable.Run): If the child is None, do not try to kill
	it.

	* qm/test/doc/reference.xml: Add documentation about
	prerequisites.

2005-07-19  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/execution_engine.py (ExecutionEngine.__AddTestToStack):
	If a test prerequisite does not exist, give the test an error
	outcome.
	* qm/test/share/messages/diagnostics.txt (prerequisite not in
	database): New message.
	* tests/regress/bad_prereq: New test.
